# Superagent

./: .claudeignore  .gitignore  .mcp.json.claude  .mcp.json.example  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.cursor/: hooks.json  mcp.json.cursor
.cursor/rules/: superagent.mdc
.githooks/: commit-msg  pre-commit
superagent/: __init__.py  coder.agent.md  procedures.md  superagent.agent.md  supercoder.agent.md  supertailor.agent.md  tailor.agent.md
superagent/contracts/: _manifest.yaml  anti-patterns.md  audit-trail.md  briefing-cache.md  capture.md  custom-overlay.md  decisions.md  domain-reflection.md  domains-and-assets.md  email-capture.md  events-stream.md  framework-artifacts.md  hierarchies.md  inbox-triage.md  ingestion.md  init-flow.md  local-first-read-order.md  mcp-preflight.md  memory-persistence.md  memory-taxonomy.md  notification-policy.md  operational-handles.md  outbound-surface.md  outbox-lifecycle.md  payment-confirmations.md  playbooks.md  privacy.md  projects.md  provenance.md  scenarios.md  sensitive-tier.md  session-scratchpad.md  snapshot-diff.md  sources.md  surfacing.md  tags.md  task-management.md  update-cadences.md  versioning.md  visibility.md  (+4 more)
superagent/docs/: architecture.md  data-sources.md  domain-guide.md  faq.md  ideas-better-structure.done.md  ideas-better-structure.md  perf-improvement-ideas.done.md  perf-improvement-ideas.md  quick-start.md  roadmap.md  skills-reference.md
superagent/migrations/: 0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.6.1.md  README.md  _manifest.yaml  _template.md
superagent/playbooks/: _schema.yaml  end-of-week.yaml  health-checkup-quarter.yaml  pre-trip-week.yaml  start-of-day.yaml  tax-prep-season.yaml
superagent/rules/: _manifest.yaml  anti-patterns.yaml  development-tooling.md  file-naming.md  image-format-policy.md  memory-routing.md  scope-discipline.md
superagent/skills/: _manifest.yaml  add-account.md  add-appointment.md  add-asset.md  add-bill.md  add-contact.md  add-document.md  add-domain.md  add-important-date.md  add-project.md  add-source.md  add-subscription.md  appointments.md  audit.md  bills.md  daily-update.md  decisions.md  doctor.md  domain-suggest.md  draft-email.md  events.md  expenses.md  follow-up.md  handoff.md  health-log.md  home-maintenance.md  important-dates.md  inbox-triage.md  ingest.md  init.md  log-event.md  migrate.md  monthly-review.md  personal-signals.md  pet-care.md  play.md  pm-review.md  projects.md  research.md  scenarios.md  (+14 more)
superagent/templates/: todo.md
superagent/tests/: __init__.py  conftest.py  test_add_step_index.py  test_audit_and_session.py  test_briefing_cache.py  test_domain_detector.py  test_domains_lazy.py  test_email_archive.py  test_email_archive_hook.py  test_handles.py  (+21 more)
(+124 files in other folders)
