[project]
name = "superagent"
version = "0.1.0"
description = "Superagent — life AI assistant. Local-first. Self-improving."
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["superagent/tests"]
pythonpath = ["."]
