[project]
name = "superagent"
version = "0.1.0"
description = "Superagent — life AI assistant. Local-first. Self-improving."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mikhail Yurasov", email = "me@yurasov.me" }]
dependencies = [
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["superagent/tests"]
pythonpath = ["."]
